Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextUndefinedField.quorum
class Main
    text txt
    action Main
        txt = cast(text, undefined)
        if txt = undefined
            output "passed"
        end
    end
end