Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjBoolean.quorum
class main
    action Main
        Text txt
        txt = cast(Text, true)
    end
end